add the webpages individually

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,17 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <a href='register'>zhuce</a>
+    <a href='shopregister'>dianpu zhuce</a>
     <p>
-    <a href='login'>denglu</a>
+    <a href='reviewerregister'>shuake zhuce</a>
+    <p>
+    <a href='shoplogin'>dianpu denglu</a>
+    <p>
+    <a href='reviewerlogin'>shuake denglu</a>
     <p>
     <a href='shop'>shop's Info</a>
     <p>
     <a href='reviewer'>shua ke's Info</a>
   </body>
 </html>
+     
