--- a/views/reviewermoney.ejs
+++ b/views/reviewermoney.ejs
@@ -7,19 +7,21 @@
             <h2>我的</h2>
             <ul class="menu">
                 <li>
-                    <em class="t20"></em><a href="#">我的信息</a>
+                    <em class="t20"></em><a href="reviewer">我的信息</a>
                 </li>
                 <li>
-                    <em class="t23 "></em><a href="#">我发布的任务</a>
+                    <em class="t23 "></em><a href="reviewermoney">我的金币</a>
+                </li>
+                <li>
+                    <em class="t23 "></em><a href="reviewertask">我的任务</a>
                 </li>
             </ul>
-            <h2>微广告</h2>
+            <h2>任务</h2>
             <ul class="menu">
                 <li>
-                    <em class="t7"></em><a href="#">广告联盟</a>
+                    <em class="t7"></em><a href="task">查看任务</a>
                 </li>
             </ul>
-
         </div>
 
 
