register,login and logout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,10 @@
     <p>Welcome to <%= title %></p>
     <a href='shopregister'>dianpu zhuce</a>
     <p>
-    <a href='register'>register</a>
+    <a href='reviewer/register'>register</a>
+    <p>
+    <p>
+    <a href='reviewer/login'>login</a>
     <p>
     <a href='shoplogin'>dianpu denglu</a>
     <p>
