--- a/views/reviewer/shop.ejs
+++ b/views/reviewer/shop.ejs
@@ -1,5 +1,5 @@
 
-<% include shared/header.ejs %>
+<% include ../shared/header %>
 
     <!--================-->
     <div class="main">
@@ -60,4 +60,4 @@
 
         </div>
     </div>
-<% include shared/footer %>
+<% include ../shared/footer %>
