--- a/views/reviewer/register.ejs
+++ b/views/reviewer/register.ejs
@@ -12,7 +12,7 @@
     <title>好评帮</title>
 
     <link href="/img/favicon.ico" rel="icon" type="image/png">
-    <link href="css/style.css"
+    <link href="../css/style.css"
           rel="stylesheet">
    
     <meta name="GENERATOR" content="MSHTML 11.00.9600.18450">
@@ -36,4 +36,4 @@
               <input type="submit" name="submit" value="注册"/>
     </form>
 </content>
-<%- include shared/footer %>
+<%- include ../shared/footer %>
