shop owner add a task

--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -12,12 +12,16 @@
     <title>好评帮</title>
 
     <link href="/img/favicon.ico" rel="icon" type="image/png">
-    <link href="../css/style.css"
-          rel="stylesheet">
+
+    <script src="../js/jquery.191.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+     <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/jquery-ui-1.10.4.min.css" rel="stylesheet">
     <link href="../css/jquery.popbox.css" rel="stylesheet">
     <link href="../css/monitor.css" rel="stylesheet">
 
-
+   <link href="../css/style.css" rel="stylesheet">
+          
     <meta name="GENERATOR" content="MSHTML 11.00.9600.18450">
 </head>
 <body class="page">
