--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
     <p>
     <a href='reviewer/login'>login</a>
     <p>
+    <p>
+    <a href='shop/upload'>shop upload</a>
+    <p>
     <a href='shoplogin'>dianpu denglu</a>
     <p>
     <a href='reviewerlogin'>shuake denglu</a>
