shop owner add task and display task list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,9 @@
     <p>
     <a href='shop/upload'>shop upload</a>
     <p>
+     <p>
+    <a href='shop/tasklist'>task list</a>
+    <p>
     <a href='shoplogin'>dianpu denglu</a>
     <p>
     <a href='reviewerlogin'>shuake denglu</a>
