--- a/views/shop/upload.ejs
+++ b/views/shop/upload.ejs
@@ -7,16 +7,16 @@
             <h2>我的</h2>
             <ul class="menu">
                 <li>
-                    <em class="t20"></em><a href="shop">我的信息</a>
+                    <em class="t20"></em><a href="#">我的信息</a>
                 </li>
                 <li>
-                    <em class="t23 "></em><a href="shoptask">我发布的任务</a>
+                    <em class="t23 "></em><a href="tasklist">我发布的任务</a>
                 </li>
             </ul>
             <h2>任务</h2>
             <ul class="menu">
                 <li>
-                    <em class="t7"></em><a href="shoppublishtask">发布任务</a>
+                    <em class="t7"></em><a href="upload">发布任务</a>
                 </li>
             </ul>
             <h2>账户</h2>
