--- a/views/shop/upload.ejs
+++ b/views/shop/upload.ejs
@@ -32,17 +32,34 @@
   <div class="content monitor">
 
     <form role="form" method="post">
+    <%if(task){%>
+        <input type="hidden" name="_id" id="_id" value=<%=task._id%> />
+     <%}%>
+
     <div class="form-group">
         <label for="shopname">Shop Name:</label>
-        <input type="text" required="" class="form-control" name="shopname" id="shopname" placeholder="please intput shop name here"/>
+
+        <%if(task){%>
+        <input type="text" required="" class="form-control" name="shopname" id="shopname" value=<%=task.shopname%> placeholder="please intput shop name here"/>
+        <%} else{%>
+                <input type="text" required="" class="form-control" name="shopname" id="shopname" placeholder="please intput shop name here"/>
+        <%}%>
     </div>
     <div class="form-group">
         <label for="urlpath">Url Path:</label>
-        <input type="text" required="" class="form-control" name="urlpath"  id="urlpath" placeholder="please intput url path here"/>
+         <%if(task){%>
+        <input type="text" required="" class="form-control" name="urlpath"  id="urlpath" value=<%=task.urlpath%> placeholder="please intput url path here"/>
+     <%} else{%>
+             <input type="text" required="" class="form-control" name="urlpath"  id="urlpath" placeholder="please intput url path here"/>
+<%}%>
     </div>
     <div class="form-group">
         <label for="completetime">Complete Time:</label>
-        <input type="text" required="" class="form-control" name="completetime" id="completetime" placeholder="please intput complete time here"/>
+         <%if(task){%>
+        <input type="text" required="" class="form-control" name="completetime" id="completetime" value=<%=task.completetime%> placeholder="please intput complete time here"/>
+    <%} else{%>
+            <input type="text" required="" class="form-control" name="completetime" id="completetime" placeholder="please intput complete time here"/>
+<%}%>
     </div>
   
 
@@ -53,9 +70,16 @@
   </div>
 <div class="form-group">
     <label for="inputfile">Comment:</label>
-    <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="please insert commnet here for this upload!"></textarea>
+     <%if(task){%>
+    <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="please insert commnet here for this upload!"><%=task.comment%></textarea>
+   <%} else{%>
+      <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="please insert commnet here for this upload!"></textarea>
+<%}%>
   </div>
     <button type="submit" class="btn btn-default">提交</button>
+    <% if(success){%>
+    <span>提交成功</span>
+    <%}%>
     </form>
 
                    
