add paging to grid

--- a/views/shared/pager.ejs
+++ b/views/shared/pager.ejs
@@ -1,10 +1,10 @@
 <br />
-<div>
+ <ul class="pager">
   <% if (!isFirstPage) { %>
-    <span class="prepage"><a title="上一页" href="?p=<%= page-1 %>">上一页</a></span>
+    <li  class="previous"><a title="上一页" href="?p=<%= page-1 %>">上一页</a></li>
   <% } %>
-
+ <li>共 <%=total%> 条记录</li>
   <% if (!isLastPage) { %>
-    <span class="nextpage"><a title="下一页" href="?p=<%= page+1 %>">下一页</a></span>
+    <li class="next"><a title="下一页" href="?p=<%= page+1 %>">下一页</a></li>
   <% } %>
-</div>
+</ul>
