user center and charge

--- a/views/shop/tasklist.ejs
+++ b/views/shop/tasklist.ejs
@@ -1,32 +1,9 @@
 
 <% include ../shared/header %>
 
-    <!--================-->
-    <div class="main">
-        <div class="side">
-            <h2>我的</h2>
-            <ul class="menu">
-                <li>
-                    <em class="t20"></em><a href="#">我的信息</a>
-                </li>
-                <li>
-                    <em class="t23 "></em><a href="tasklist">我发布的任务</a>
-                </li>
-            </ul>
-            <h2>任务</h2>
-            <ul class="menu">
-                <li>
-                    <em class="t7"></em><a href="upload">发布任务</a>
-                </li>
-            </ul>
-            <h2>账户</h2>
-            <ul class="menu">
-                <li>
-                    <em class="t7"></em><a href="shopcharge">充值</a>
-                </li>
-            </ul>
-        </div>
-
+<!--================-->
+<div class="main">
+<% include left %>
 
 <script type="text/javascript">
   $(document).ready(function(){
@@ -38,9 +15,9 @@
 });
 </script>
   <div class="content monitor">
-
+<br/>
   <input type="text" placeholder="输入店名进行搜索" id="keywords" />  <button type="button" id="btnSearch" class="btn btn-primary">搜索</button>
-  <br/>
+  <br/> <br/> 
   <table class="table table-striped">
 	 <% if(success){%>
     <span>删除成功</span>
