--- a/views/shop/upload.ejs
+++ b/views/shop/upload.ejs
@@ -3,30 +3,7 @@
 
     <!--================-->
     <div class="main">
-        <div class="side">
-            <h2>我的</h2>
-            <ul class="menu">
-                <li>
-                    <em class="t20"></em><a href="#">我的信息</a>
-                </li>
-                <li>
-                    <em class="t23 "></em><a href="tasklist">我发布的任务</a>
-                </li>
-            </ul>
-            <h2>任务</h2>
-            <ul class="menu">
-                <li>
-                    <em class="t7"></em><a href="upload">发布任务</a>
-                </li>
-            </ul>
-            <h2>账户</h2>
-            <ul class="menu">
-                <li>
-                    <em class="t7"></em><a href="shopcharge">充值</a>
-                </li>
-            </ul>
-        </div>
-
+    <% include left %>
 
 
   <div class="content monitor">
@@ -69,11 +46,11 @@
     <p class="help-block">help comment...</p>
   </div>
 <div class="form-group">
-    <label for="inputfile">Comment:</label>
+    <label for="inputfile">说明:</label>
      <%if(task){%>
-    <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="please insert commnet here for this upload!"><%=task.comment%></textarea>
+    <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="说明"><%=task.comment%></textarea>
    <%} else{%>
-      <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="please insert commnet here for this upload!"></textarea>
+      <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="说明"></textarea>
 <%}%>
   </div>
     <button type="submit" class="btn btn-default">提交</button>
