--- a/views/shop/left.ejs
+++ b/views/shop/left.ejs
@@ -2,22 +2,25 @@
             <h2>我的</h2>
             <ul class="menu">
                 <li>
-                    <em class="t20"></em><a href="userinfo">我的信息</a>
+                    <em class="t20"></em><a href="/shop/userinfo">我的信息</a>
+                </li>
+                 <li>
+                    <em class="t23 "></em><a href="/shopmgr/shoplist">我的商店</a>
                 </li>
                 <li>
-                    <em class="t23 "></em><a href="tasklist">我发布的任务</a>
+                    <em class="t23 "></em><a href="/shop/tasklist">我发布的任务</a>
                 </li>
             </ul>
             <h2>任务</h2>
             <ul class="menu">
                 <li>
-                    <em class="t7"></em><a href="create">发布任务</a>
+                    <em class="t7"></em><a href="/shop/create">发布任务</a>
                 </li>
             </ul>
             <h2>账户</h2>
             <ul class="menu">
                 <li>
-                    <em class="t7"></em><a href="shopcharge">充值</a>
+                    <em class="t7"></em><a href="/shop/shopcharge">充值</a>
                 </li>
             </ul>
         </div>
