--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -14,6 +14,8 @@
     <link href="/img/favicon.ico" rel="icon" type="image/png">
 
     <script src="/js/jquery.191.js"></script>
+        <script src="/js/jquery-ui-1.10.4.min.js"></script>
+
 	<script src="/js/bootstrap.min.js"></script>
      <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/jquery-ui-1.10.4.min.css" rel="stylesheet">
