--- a/views/shop/shoplist.ejs
+++ b/views/shop/shoplist.ejs
@@ -10,7 +10,7 @@
 
 
   <div class="content monitor">
-
+   <%- include ../components/notification %>
   <button id="btnNewShop" class="btn btn-default">新建</button>
    <table class="table table-striped">	 
 	<thead>
