--- a/views/shop/tasklist.ejs
+++ b/views/shop/tasklist.ejs
@@ -15,7 +15,7 @@
 });
 </script>
   <div class="content monitor">
-
+   <%- include ../components/notification %>
 
 <br/>
   <input type="text" placeholder="输入店名进行搜索" id="keywords" />  <button type="button" id="btnSearch" class="btn btn-primary">搜索</button>
