--- a/views/shop/create.ejs
+++ b/views/shop/create.ejs
@@ -3,6 +3,7 @@
 
     <!--================-->
     <div class="main">
+    
     <%- include left %>
 
   <script>
@@ -10,12 +11,13 @@
             $('.datepicker').datepicker({
            startDate: '-3d'
 });
-$.datepicker.formatDate( "yyyy-mm-dd", new Date() );
-
+$.datepicker.formatDate( "yyyy-mm-dd",new Date());
+        });
         </script>
- 
+ 	<script src="/js/shopmgr.upload.js"></script>
+     <link href="/css/uploadstyles.css" rel="stylesheet">
   <div class=" monitor" style="padding:15px; width:500px;float:left;">
-  
+     <%- include ../components/notification %>
     <form role="form" method="post" action="create" enctype="multipart/form-data">  
            
     <div class="form-group">
@@ -40,19 +42,26 @@ $.datepicker.formatDate( "yyyy-mm-dd", new Date() );
         <label for="completetime">完成时间:</label>  <br/>   
         <input type="text" required="" data-date-format="yyyy-mm-dd" class="datepicker" name="completetime" id="completetime" placeholder="完成时间"/>
     </div>
-  
 
-<div class="form-group">
-    <label for="inputfile">文件输入:</label>
-    <input type="file" name="fileimg"  id="inputfile" />
-    <p class="help-block">help comment...</p>
-    <image src="../uploads/images.png" />
-  </div>
 <div class="form-group">
     <label for="inputfile">说明:</label>   
       <textarea  id="comment" name="comment" rows="4" cols="50" placeholder="说明"></textarea>
 
   </div>
+
+      <div class="form-group">
+        <label for="inputfile">上传图片:</label>
+           <br/><br/>
+            <button class="btn btn-lg upload-btn" type="button">上传图片</button>
+
+              <div class="progress-bar" role="progressbar"></div>
+      
+      
+
+  <input id="upload-input" type="file" name="uploadimgs" multiple="multiple"></br>
+
+    </div>
+
     <button type="submit" class="btn btn-default">提交</button>
     </form>        
         </div>
