--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -32,7 +32,7 @@
         <div class="top">
             <a class="logo" href="/">
                 <img alt="微指数"
-                     src="../images/logo_title.png">
+                     src="/images/logo_title.png">
             </a>
 
             <div class="user">
@@ -43,7 +43,7 @@
               
                 <span class="span_vip">
                     <a href="#" target="_blank">
-                        <img style="width: 28px;" src="../images/v1.png">个人中心
+                        <img style="width: 28px;" src="/images/v1.png">个人中心
                         <div class="em"></div>
                     </a>
 
